crates/shiplog-workstreams/tests/snapshots/cluster_snapshot__empty_workstreams.snap
---
source: crates/shiplog-workstreams/tests/cluster_snapshot.rs
assertion_line: 92
expression: ws.workstreams
---
[]
