crates/shiplog-workstreams/tests/snapshots/cluster_snapshot__mixed_kinds_stats.snap
---
source: crates/shiplog-workstreams/tests/cluster_snapshot.rs
assertion_line: 111
expression: stats
---
- - org/proj
  - pull_requests: 2
    reviews: 2
    manual_events: 1
